--- a/app/views/Register.scala.html
+++ b/app/views/Register.scala.html
@@ -41,10 +41,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12" style="text-decoration-color: slategrey">
-                    <form action = "/login" method = post>
+                    <form action = "/regis" method = post>
                         <div class="form-group">
                             <label for="Username">Username</label>
-                            <input  class="form-control" id="Username" name="username" placeholder="Enter Username" >
+                            <input class="form-control" id="Username" name="username" placeholder="Enter Username" >
                         </div>
                         <div class="form-group">
                             <label for="Password1">Password</label>
